--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  get: 
   cupertino_icons: ^1.0.2
   latlong2: ^0.9.0
   url_launcher: ^6.1.14
