--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   latlong2: ^0.9.0
   url_launcher: ^6.1.14
   flutter_geocoder: ^0.2.2-nullsafety
+  geocoding: ^2.1.1
+  geolocator: ^10.1.0
+  fluttertoast: ^8.2.2
   
 
 dev_dependencies:
