--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   geocoding: ^2.1.1
   geolocator: ^10.1.0
   fluttertoast: ^8.2.2
+  camera: ^0.10.5+5
+  get_it: ^7.6.4
+  extended_image: ^8.1.1
   
 
 dev_dependencies:
